--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -677,7 +677,7 @@ html, body {
   }
 }
 
-#options_overlay, #skip_overlay {
+#options_overlay, #skip_overlay, #hints_overlay {
   color: #aaa;
   font-size: 5vh;
   @media (min-width: 768px) {
@@ -697,7 +697,7 @@ html, body {
     border-width: 0px;
     padding: 0;
   }
-  .options_container {
+  .options_container, #hints_container {
     position: relative;
     max-width: 300px;
     padding: 30px;
@@ -734,9 +734,34 @@ html, body {
         text-decoration: none;
       }
     }
+    #show_hints_btn {
+      color: #ccc;
+    }
   }
 }
 
+#hints_container {
+  color: #ccc !important;
+  font-size: 28px;
+  max-width: 350px !important;
+  // text-align: center;
+  div {
+    margin: 15px auto;
+  }
+}
+
+#more_hints, #want_hints {
+  color: white;
+  margin-top: 30px;
+  border-radius: 3px;
+  font-size: 32px;
+  box-shadow: 0px 0px 30px #e8f8ff;
+  padding: 10px;
+  text-weight: bold;
+  .glyphicon-facetime-video {
+    top: 5px;
+  }
+}
 
 
 .credits_content, .profile_content {
@@ -878,6 +903,7 @@ html, body {
     color: white;
     position: relative;
   }
+
   @keyframes glitch-anim-1 {
     0% {
       clip: rect(43px, 2000px, 43px, 0);
