add video ad functionality

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -699,7 +699,7 @@ html, body {
   }
   .options_container, #hints_container {
     position: relative;
-    max-width: 300px;
+    max-width: 350px;
     padding: 30px;
     background: white;
     color: var(--main-background-color);
@@ -754,12 +754,13 @@ html, body {
   color: white;
   margin-top: 30px;
   border-radius: 3px;
-  font-size: 32px;
+  font-size: 28px;
   box-shadow: 0px 0px 30px #e8f8ff;
   padding: 10px;
   text-weight: bold;
   .glyphicon-facetime-video {
     top: 5px;
+    float: right;
   }
 }
 
