--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -123,7 +123,7 @@ div {
 }
 
 .modal-backdrop {
-  background-color: rgb(204, 204, 204);
+  background-color: rgb(238, 238, 238);
   opacity: 0.8 !important;
 }
 
@@ -828,15 +828,15 @@ html, body {
 .target_word {
   .full_match {
     color: white;
-    text-shadow: 0px 0px 10px white;
+    text-shadow: 0px 0px 20px white;
   }
   .partial_match {
-    color: #fff;
-    opacity: 0.7;
+    color: white;
+    text-shadow: 0px 0px 5px white;
   }
   .not_match {
-    color: #eee;
-    opacity: 0.5;
+    color: white;
+    opacity: 0.9;
   }
 }
 
