fix level 50 word choices font size, fix zen loading page font size (too small)

--- a/app/views/levels/_theme_skin.html.erb
+++ b/app/views/levels/_theme_skin.html.erb
@@ -78,6 +78,12 @@
   line-height: 5.5vh;
   font-size: 4.5vh;
 }
+
+.next_word_letter {
+  width: 5.5vh !important;
+  font-size: 4.5vh !important;
+}
+
 .choices .next_word {
   width: <%= 7 * 5.5 %>vh;
 }
