--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -294,8 +294,8 @@ div {
   .definition_content {
     padding: 40px 5px;
     max-width: 800px;
-    color: #999999;
-    opacity: 0.7;
+    color: #afafaf;
+    // opacity: 0.7;
     text-align: center;
     font-size: 2vh;
     white-space: pre-wrap;
