--- a/app/views/levels/reload_show.js.erb
+++ b/app/views/levels/reload_show.js.erb
@@ -1,6 +1,6 @@
 $('body').css("backgroundColor", "initial");
 
-<% if @history.size == 1 && !@undo && !@level.id.in?(1..5) && rand(5) == 0 && !@skip_interstitial %>
+<% if false && @history.size == 1 && !@undo && !@level.id.in?(1..5) && rand(5) == 0 && !@skip_interstitial %>
   if (typeof ad_display !== 'undefined') {
     ad_display.performClick();
   }
