--- a/app/views/levels/_completed_message.html.erb
+++ b/app/views/levels/_completed_message.html.erb
@@ -3,7 +3,7 @@
     <div id="well_done">WELL <span></span> DONE</div>
     <div id="completed_in"><b> <%= @level.start.upcase %> </b> to <span id="path_length"><%= @level.target.upcase %></span> </div>
     <%= render 'history_all' %>
-    <%= render 'achievement' if within_optimal?  %>
+    <%= render 'achievement' %>
     <div class="next_level_btn_container">
       <% if @level.id == 9999 %> <%# zen %>
         <%= link_to "New Level", loading_level_path('zen') , class:"btn btn_custom next_level", remote: true %>
