--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -157,8 +157,6 @@ div {
     padding: 0px 0px;
     opacity: 1;
     background-color: white;
-    // display: flex;
-    // justify-content: space-evenly;
   }
   .next_word_container {
     background-color: none;
@@ -636,15 +634,13 @@ html, body {
       cursor: default;
     }
   }
-  .level_start_word, .level_target_word {
+  .level_start_word span, .level_target_word span {
+    width: 2vh;
+    display: inline-block;
     text-transform: uppercase;
     text-align: center;
     font-size: 2vh;
     color: white;
-    letter-spacing: 2px;
-  }
-  .level_target_word {
-    padding-right: 2px;
   }
   .chapter {
     text-transform: uppercase;
