--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -511,7 +511,7 @@ html, body {
   }
   .game_title {
     line-height: 8vh;
-    letter-spacing: 1vw;
+    letter-spacing: 2vw;
     margin-top: 4vh;
     font-weight: bold;
   }
@@ -920,13 +920,10 @@ html, body {
   width: 100%;
   position: fixed;
 
-  div {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+
+  #no_internet_message{
+    margin-top: 10vh;
+    font-size: 3vh;
   }
 
   .wrap {
@@ -938,6 +935,7 @@ html, body {
     width: 100%;
     transform: translate(-50%, -50%);
     white-space: nowrap;
+    color: white;
   }
 
   .glitch {
@@ -1084,7 +1082,5 @@ html, body {
     color: #8be0de;
     font-size: 5vh;
     font-weight: bold;
-    margin-top: 10%;
-    margin-bottom: 10%;
   }
 }
