--- a/app/views/levels/_theme_skin.html.erb
+++ b/app/views/levels/_theme_skin.html.erb
@@ -30,8 +30,12 @@
 
 
 
-.start_word, .target_word, .curr_word .choosable:hover, .message_container, #more_hints, #want_hints {
+.start_word, .target_word, .curr_word .choosable:hover, .message_container, #more_hints, #want_hints, .firefly, .orb {
   background-color: <%= main_color %> !important;
+}
+
+.orb {
+  box-shadow: 0px 0px 1vh 1vh <%= main_color %>;
 }
 
 .curr_word .choosable {
