--- a/app/views/levels/reload_show.js.erb
+++ b/app/views/levels/reload_show.js.erb
@@ -7,4 +7,5 @@ $('body').css("backgroundColor", "initial");
 <% end %>
 
 $('.content').html("<%= j render 'show_as_partial'%>")
+$('.firefly').show();
 everyFunction();
