add orb in complete page, redesign title page, change flag to heart (update message), change zen unlocked from 20 normal levels to 20 optimal levels

--- a/app/views/levels/_achievement.html.erb
+++ b/app/views/levels/_achievement.html.erb
@@ -1,7 +1,7 @@
 <div class="achievement">
   <%  if optimal_distance <= 0  %>
-    <span class="glyphicon glyphicon-flag"></span> Optimal Solution Found
+    <span class="glyphicon glyphicon-heart big_heart"></span> You got their LOVE!
   <% else %>
-    Optimal + <%= optimal_distance %>
+    Just <%= optimal_distance %> fewer steps for their LOVE <span class="glyphicon glyphicon-heart small_heart"></span> !
   <% end %>
 </div>
