--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -3,7 +3,7 @@
     <div class="limit_dot glyphicon glyphicon-triangle-bottom"></div>
   <% end %>
 
-  <div class="limit_dot glyphicon glyphicon-flag"></div>
+  <div class="limit_dot glyphicon glyphicon-heart"></div>
 
   <% (@limit - @level.path.length).times do %>
     <div class="limit_dot">&middot;</div>
