--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -6,8 +6,8 @@ html, body{
   height: 100% !important;
   width: 100% !important;
   min-width: 100% !important;
-  // position: fixed;
-  overflow-x: hidden;
+  position: fixed;
+  overflow: hidden;
   margin: 0 !important;
   padding: 0 !important;
   font-family: 'Gloria Hallelujah', cursive;
@@ -376,6 +376,7 @@ div {
     border-top-right-radius: 100vw;
     background-color: white;
     margin: 0 auto;
+    margin-top: 5vh;
     .orb_eyes {
       position: absolute;
       top: 20vw;
@@ -599,7 +600,7 @@ html, body {
     // font-family: Helvetica, sans-serif;
   }
   .game_title_cont {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
@@ -611,6 +612,7 @@ html, body {
     margin: 0;
     padding: 0;
     // flex-wrap: wrap;
+    // padding-top: 20vh;
   }
   .title_orb {
     display: inline-block;
@@ -650,6 +652,7 @@ html, body {
     letter-spacing: 2vh;
     margin-right: -2vh;
     display: inline-block;
+    width: 100vw;
     #title_empty_space {
       display: inline-block;
       width: 2vh;
@@ -1064,6 +1067,11 @@ html, body {
   .misposition_orb {
     width: 3vh;
     height: 3vh;
+    .orb_eyes {
+      top: 0.5vh;
+      width: 100%;
+      height: 1vh;
+    }
   }
   .sleeping_orb {
     position: absolute;
