--- a/app/views/levels/_error.html.erb
+++ b/app/views/levels/_error.html.erb
@@ -1,4 +1,4 @@
 <div class="wrap">
-  <div class="refresh_btn glitch" data-text="REWORD">RE LOAD</div>
+  <div class="refresh_btn">REL<div class='title_orb'><div class="orb_eyes title_orb_eyes"><div class="orb_eye orb_eye_left"></div><div class="orb_eye orb_eye_right"></div></div></div><div id="title_empty_space"></div>AD</div>
   <div id="no_internet_message">NO INTERNET ACCESS</div>
 </div>
