--- a/app/views/levels/_home_as_partial.html.erb
+++ b/app/views/levels/_home_as_partial.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div id="zen_play_link_container">
-      <% if @completed_levels.size < 20 %>
+      <% if @optimal_levels.count < 20 %>
         <span class="glyphicon glyphicon-lock"></span>
       <% end %>
 
