--- a/app/views/levels/_loading.html.erb
+++ b/app/views/levels/_loading.html.erb
@@ -1,4 +1,6 @@
 <div class="curr_word text-center zen_loading">
+  <span class="small glyphicon glyphicon-heart"></span> <%= user.optimal_zen_levels %>
+  <br>
   <span class="small">Total solved:</span> <%= user.total_completed_zen_levels %>
   <br>
   <span class="small">Current Streak:</span> <%= user.continuous_zen_levels %>
