remove firefly, revert song, not show misposition orb showing on level <= 10

--- a/app/views/levels/_options_container.html.erb
+++ b/app/views/levels/_options_container.html.erb
@@ -12,10 +12,10 @@
     <h5>Game Design & Programming</h5>
     Dion Chan<br><br>
     <h5>Music</h5>
-    Peritune - Sparkle
+    Peritune - Gentle Theme
 
     <div class="soundcloud_links">
-      <%= link_to "https://soundcloud.com/sei_peridot/sparkle" do %>
+      <%= link_to "https://soundcloud.com/sei_peridot/gentle_theme" do %>
         <% image_tag "https://spadgos.github.io/sfjs-next-soundcloud/cloud.png", class:"soundcloud_logo", id:"soundcloud_link" %>
       <% end %>
     </div>
